--- a/Template/Template/App.xaml
+++ b/Template/Template/App.xaml
@@ -4,9 +4,21 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:prism="http://prismlibrary.com"
+             xmlns:dictionaries="clr-namespace:Template.Resources.Dictionaries;assembly=Template"
              mc:Ignorable="d"
              x:Class="Template.App">
     <Application.Resources>
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <dictionaries:Colors />
+                <dictionaries:Converters />
+                <dictionaries:Styles />
+                <dictionaries:Templates />
+                <dictionaries:Values />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
 
     </Application.Resources>
 </prism:PrismApplication>
