--- a/Templates/Template.Mobile/Resources/Dictionaries/Styles.xaml
+++ b/Templates/Template.Mobile/Resources/Dictionaries/Styles.xaml
@@ -3,6 +3,7 @@
                     xmlns="http://xamarin.com/schemas/2014/forms"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     xmlns:ctrl="clr-namespace:Template.Mobile.CustomCtrl"
+                    xmlns:cells="clr-namespace:Template.Mobile.Views.Cells"
                     xmlns:dictionaries="clr-namespace:Template.Mobile.Resources.Dictionaries;assembly=Template.Mobile"
                     xmlns:material="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
                     xmlns:tabs="clr-namespace:Sharpnado.Presentation.Forms.CustomViews.Tabs;assembly=Sharpnado.Presentation.Forms">
@@ -33,7 +34,7 @@
         <Setter Property="BarTextColor" Value="{DynamicResource DynamicBarTextColor}" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="ActivityIndicator">
+    <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{StaticResource Accent}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
@@ -41,21 +42,21 @@
         <Setter Property="WidthRequest" Value="50" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="Button">
+    <Style TargetType="Button">
         <Setter Property="TextColor" Value="White" />
         <Setter Property="BackgroundColor" Value="{StaticResource Accent}" />
-        <Setter Property="WidthRequest" Value="100" />
+        <Setter Property="WidthRequest" Value="200" />
         <Setter Property="FontFamily" Value="{StaticResource FontSemiBold}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="CheckBox">
+    <Style TargetType="CheckBox">
         <Setter Property="Color" Value="{StaticResource Accent}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="Editor">
+    <Style TargetType="Editor">
         <Setter Property="PlaceholderColor" Value="{StaticResource Accent}" />
         <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
@@ -63,7 +64,7 @@
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="Entry">
+    <Style TargetType="Entry">
         <Setter Property="PlaceholderColor" Value="{StaticResource Accent}" />
         <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
@@ -86,27 +87,39 @@
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-
-    <Style ApplyToDerivedTypes="True" TargetType="DatePicker">
-        <Setter Property="TextColor" Value="{StaticResource DynamicPrimaryTextColor}" />
+    <Style TargetType="DatePicker">
+        <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
+    <Style TargetType="ctrl:CustomMaterialDatePicker">
+        <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
+        <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
+        <Setter Property="Visual" Value="Material" />
+        <Setter Property="PlaceHolderColor" Value="{StaticResource Accent}" />
+    </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="TimePicker">
-        <Setter Property="TextColor" Value="{StaticResource DynamicPrimaryTextColor}" />
+    <Style TargetType="TimePicker">
+        <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="ProgressBar">
+    <Style TargetType="ctrl:CustomMaterialTimePicker">
+        <Setter Property="TextColor" Value="{DynamicResource DynamicPrimaryTextColor}" />
+        <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
+        <Setter Property="Visual" Value="Material" />
+        <Setter Property="PlaceHolderColor" Value="{StaticResource Accent}" />
+    </Style>
+
+    <Style TargetType="ProgressBar">
         <Setter Property="ProgressColor" Value="{StaticResource Accent}" />
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="Slider">
+    <Style TargetType="Slider">
         <Setter Property="MinimumTrackColor" Value="{StaticResource Accent}" />
         <Setter Property="MaximumTrackColor" Value="{StaticResource Accent}" />
         <Setter Property="ThumbColor" Value="{StaticResource Accent}" />
@@ -114,18 +127,19 @@
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <Style ApplyToDerivedTypes="True" TargetType="Stepper">
+    <Style TargetType="Stepper">
         <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
     </Style>
 
-    <!--<Style ApplyToDerivedTypes="True" TargetType="ctrl:MaterialStepper">
-        <Setter Property="TintColor" Value="{StaticResource Accent}" />
+    <Style TargetType="ctrl:CustomMaterialStepper">
+        <Setter Property="BackgroundColor" Value="{DynamicResource DynamicBackgroundColor}" />
         <Setter Property="Visual" Value="Material" />
-    </Style>-->
+        <Setter Property="TintColor" Value="{StaticResource Accent}" />
+    </Style>
 
 
-    <Style ApplyToDerivedTypes="True" TargetType="tabs:BottomTabItem">
+    <!--<Style ApplyToDerivedTypes="True" TargetType="tabs:BottomTabItem">
         <Setter Property="SelectedTabColor" Value="{StaticResource Accent}" />
         <Setter Property="UnselectedLabelColor" Value="Gray" />
         <Setter Property="UnselectedIconColor" Value="LightGray" />
@@ -133,8 +147,49 @@
         <Setter Property="LabelSize" Value="14" />
         <Setter Property="IconSize" Value="28" />
         <Setter Property="IsTextVisible" Value="False" />
+    </Style>-->
+
+    <!--  Style for CollectionView States (Grid as first layout in the itemTemplate)  -->
+
+    <Style x:Key="SelectableCollectionView" TargetType="cells:SelectableCellBase">
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal">
+                        <VisualState.Setters>
+                            <Setter Property="ColorSelected_Tint" Value="Transparent" />
+                            <Setter Property="ColorSelected_Background" Value="Transparent" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="Selected">
+                        <VisualState.Setters>
+                            <Setter Property="ColorSelected_Tint" Value="{StaticResource Accent}" />
+                            <Setter Property="ColorSelected_Background" Value="{DynamicResource DynamicMenuBackgroundColor}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
     </Style>
 
+    <!--<Style x:Key="SelectableCollectionView" TargetType="Grid">
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal">
+                        <VisualState.Setters>
+                            <Setter Property="BackgroundColor" Value="Transparent" />
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="Selected">
+                        <VisualState.Setters>
+                            <Setter Property="BackgroundColor" Value="{StaticResource Accent}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
+    </Style>-->
 
     <!--  Named Styles - Apply explicitely to Target with Style="{StaticResource key}"  -->
 
