--- a/Templates/Template.Mobile/Views/MDPage.xaml
+++ b/Templates/Template.Mobile/Views/MDPage.xaml
@@ -5,15 +5,17 @@
                   xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   mc:Ignorable="d"
-                  xmlns:bhv="clr-namespace:Prism.Behaviors;assembly=Prism.Forms">
+                  xmlns:bhv="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
+                  xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core">
     <MasterDetailPage.Master>
         <ContentPage Title="Menu"
-                     BackgroundColor="{DynamicResource DynamicBottomBarBackground}"
+                     BackgroundColor="{DynamicResource DynamicMenuHeaderBorderColor}"
+                     ios:Page.UseSafeArea="true"
                      IconImageSource="ic_menu.png">
 
             <!--  Ici on dessine notre menu comme on veut  -->
             <ContentPage.Content>
-                <Grid>
+                <Grid Padding="3">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -21,32 +23,53 @@
                     </Grid.RowDefinitions>
 
                     <!--  Header Text&Action  -->
-                    <Grid Grid.Row="0"
-                          Margin="0"
-                          Padding="5"
-                          VerticalOptions="Center"
-                          BackgroundColor="{DynamicResource DynamicNavigationBarColor}">
+                    <Grid Grid.Row="0" VerticalOptions="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
 
+                        <!--  Menu Header Image  HeightRequest="168"  -->
+                        <Image Grid.Row="0"
+                               Grid.Column="0"
+                               HeightRequest="168"
+                               Aspect="AspectFill"
+                               Source="{DynamicResource DynamicMenuImageSource}" />
+
                         <!--  User  -->
-                        <StackLayout Grid.Row="0"
-                                     Grid.Column="0"
-                                     Spacing="5"
-                                     Padding="5"
-                                     HorizontalOptions="FillAndExpand"
-                                     VerticalOptions="Center">
+                        <Grid Grid.Row="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
 
-                            <Label Style="{StaticResource TextSubhead}" Text="{Binding UserDisplayName}" />
+                            <Label Grid.Row="0"
+                                   Grid.Column="0"
+                                   Style="{StaticResource TextSubhead}"
+                                   TextColor="{DynamicResource DynamicBarTextColor}"
+                                   Text="{Binding UserDisplayName}" />
 
-                            <Label Style="{StaticResource TextSubheadSecondary}" Text="{Binding UserLogin}" />
+                            <Label Grid.Row="1"
+                                   Grid.Column="0"
+                                   Style="{StaticResource TextSubheadSecondary}"
+                                   TextColor="{DynamicResource DynamicBarTextColor}"
+                                   Text="{Binding UserLogin}" />
 
-                        </StackLayout>
-
+                            <Image Grid.Row="0"
+                                   Grid.RowSpan="2"
+                                   Grid.Column="1"
+                                   WidthRequest="48"
+                                   HeightRequest="48"
+                                   Aspect="AspectFit"
+                                   Source="ic_exit_to_app.png" />
+                        </Grid>
                     </Grid>
 
                     <!--  Header Separator  -->
@@ -54,23 +77,23 @@
                                  HeightRequest="1"
                                  HorizontalOptions="FillAndExpand"
                                  VerticalOptions="FillAndExpand"
-                                 BackgroundColor="" />
+                                 BackgroundColor="White" />
 
                     <!--  List_Menu  -->
-                    <ListView Grid.Row="2"
-                              Style="{StaticResource ListMenuStyle}"
-                              AutomationId="List_Menu"
-                              CachingStrategy="RecycleElement"
-                              HasUnevenRows="True"
-                              SelectedItem="{Binding SelectedMenuItem, Mode=TwoWay}"
-                              ItemTemplate="{StaticResource MenuItemTemplate}"
-                              ItemsSource="{Binding MenuItems}">
-                        <ListView.Behaviors>
-                            <bhv:EventToCommandBehavior EventArgsParameterPath="Item"
-                                                        EventName="ItemTapped"
-                                                        Command="{Binding MenuNavigateCommand}" />
-                        </ListView.Behaviors>
-                    </ListView>
+                    <CollectionView Grid.Row="2"
+                                    BackgroundColor="{DynamicResource DynamicMenuBackgroundColor}"
+                                    ItemSizingStrategy="MeasureAllItems"
+                                    SelectionMode="Single"
+                                    SelectedItem="{Binding SelectedMenuItem, Mode=TwoWay}"
+                                    ItemTemplate="{StaticResource CollectionViewDataTemplate_SingleLine_MDMenuItem}"
+                                    ItemsSource="{Binding MenuItems}"
+                                    SelectionChangedCommandParameter="{Binding SelectedMenuItem}"
+                                    SelectionChangedCommand="{Binding MenuNavigateCommand}">
+                        <CollectionView.ItemsLayout>
+                            <!--  https://docs.microsoft.com/en-us/xamarin/xamarin-forms/user-interface/collectionview/layout  -->
+                            <LinearItemsLayout Orientation="Vertical" />
+                        </CollectionView.ItemsLayout>
+                    </CollectionView>
 
                 </Grid>
             </ContentPage.Content>
