--- a/Templates/Template.Mobile/Views/SamplePage.xaml
+++ b/Templates/Template.Mobile/Views/SamplePage.xaml
@@ -1,21 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:ContentPageBase x:TypeArguments="viewModels:SamplePageViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<views:ContentPageBase x:Class="Template.Mobile.Views.SamplePage"
+                       xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
-                       xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
-                       xmlns:mvvm="http://prismlibrary.com"
-                       xmlns:sampleApi="clr-namespace:Template.Mobile.Models.SampleApi;assembly=Template.Mobile"
                        mc:Ignorable="d"
-                       x:Class="Template.Mobile.Views.SamplePage"
+                       xmlns:prism="http://prismlibrary.com"
+                       xmlns:sampleApi="clr-namespace:Template.Mobile.Models.SampleApi;assembly=Template.Mobile"
+                       xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
+                       xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
+                       Title="{Binding [SamplePage_Title]}"
+                       x:TypeArguments="viewModels:SamplePageViewModel"
                        x:DataType="viewModels:SamplePageViewModel"
-                       mvvm:ViewModelLocator.AutowireViewModel="True"
-                       Title="{Binding [SamplePage_Title]}">
+                       prism:ViewModelLocator.AutowireViewModel="True">
     <ContentPage.Content>
-        <CollectionView ItemsSource="{Binding Users}"
+        <CollectionView HorizontalOptions="FillAndExpand"
                         VerticalOptions="FillAndExpand"
-                        HorizontalOptions="FillAndExpand">
+                        ItemsSource="{Binding Users}">
             <CollectionView.EmptyView>
                 <Label Text="No Records Found" />
             </CollectionView.EmptyView>
