--- a/Templates/Template.Mobile/Resources/Dictionaries/DataTemplates.xaml
+++ b/Templates/Template.Mobile/Resources/Dictionaries/DataTemplates.xaml
@@ -2,7 +2,7 @@
 <ResourceDictionary x:Class="Template.Mobile.Resources.Dictionaries.DataTemplates"
                     xmlns="http://xamarin.com/schemas/2014/forms"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    xmlns:cells="clr-namespace:Template.Mobile.Views.Cells"
+                    xmlns:views="clr-namespace:Template.Mobile.Views"
                     xmlns:dictionaries="clr-namespace:Template.Mobile.Resources.Dictionaries;assembly=Template.Mobile"
                     xmlns:models="clr-namespace:Template.Mobile.Models">
 
@@ -19,7 +19,7 @@
     <!--  DataTemplate  -->
 
     <DataTemplate x:Key="CollectionViewDataTemplate_SingleLine_MDMenuItem" x:DataType="models:MenuItemModel">
-        <cells:SelectableCellBase x:Name="cellcontainer" Style="{StaticResource SelectableCollectionView}">
+        <views:SelectableCellBase x:Name="cellcontainer" Style="{StaticResource SelectableCollectionView}">
             <Grid Margin="5"
                   Padding="5"
                   HorizontalOptions="FillAndExpand"
@@ -41,11 +41,11 @@
                        IsEnabled="{Binding IsActive}"
                        Text="{Binding Title}" />
             </Grid>
-        </cells:SelectableCellBase>
+        </views:SelectableCellBase>
     </DataTemplate>
 
     <DataTemplate x:Key="CollectionViewDataTemplate_MultiColumns_CenteredImageLabel" x:DataType="models:ImageModel">
-        <cells:SelectableCellBase x:Name="cellcontainer" Style="{StaticResource SelectableCollectionView}">
+        <views:SelectableCellBase x:Name="cellcontainer" Style="{StaticResource SelectableCollectionView}">
             <Grid HorizontalOptions="Center" VerticalOptions="Center">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -71,7 +71,7 @@
                        LineBreakMode="TailTruncation"
                        Text="{Binding Filename, Converter={StaticResource WithoutExtensionConverter}}" />
             </Grid>
-        </cells:SelectableCellBase>
+        </views:SelectableCellBase>
     </DataTemplate>
 
     <!--<DataTemplate x:Key="SillyDataTemplate">
