--- a/Templates/Template.Mobile/Views/Cells/SelectableCellBase.xaml
+++ b/Templates/Template.Mobile/Views/Cells/SelectableCellBase.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<Frame x:Class="Template.Mobile.Views.Cells.SelectableCellBase"
+<Frame x:Class="Template.Mobile.Views.SelectableCellBase"
        xmlns="http://xamarin.com/schemas/2014/forms"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:d="http://xamarin.com/schemas/2014/forms/design"
