--- a/Templates/Template.Mobile/Views/ContentViews/Debug_ThemesView.xaml
+++ b/Templates/Template.Mobile/Views/ContentViews/Debug_ThemesView.xaml
@@ -2,17 +2,11 @@
 <views:ContentViewBase x:Class="Template.Mobile.Views.Debug_ThemesView"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       mc:Ignorable="d"
                        xmlns:ctrl="clr-namespace:Template.Mobile.CustomCtrl"
                        xmlns:materialFrame="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
-                       xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
                        xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
                        xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
-                       x:TypeArguments="viewModels:Debug_ThemesViewModel"
-                       x:DataType="viewModels:Debug_ThemesViewModel"
-                       prism:ViewModelLocator.AutowireViewModel="True">
+                       x:DataType="viewModels:Debug_ThemesViewModel">
 
     <ScrollView>
         <StackLayout Spacing="16" Padding="16">
@@ -83,6 +77,13 @@
                            Margin="20"
                            HorizontalOptions="Center"
                            Source="splash_centered.png" />
+                </StackLayout>
+            </materialFrame:MaterialFrame>
+
+            <materialFrame:MaterialFrame>
+                <StackLayout>
+                    <Label Style="{StaticResource TextHeadline}" Text="LoadingView" />
+                    <views:LoadingView HeightRequest="200" />
                 </StackLayout>
             </materialFrame:MaterialFrame>
         </StackLayout>
