--- a/Templates/Template.Mobile/Views/ContentPages/HomePage.xaml
+++ b/Templates/Template.Mobile/Views/ContentPages/HomePage.xaml
@@ -2,17 +2,11 @@
 <views:ContentPageBase x:Class="Template.Mobile.Views.HomePage"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       mc:Ignorable="d"
                        xmlns:materialFrame="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
-                       xmlns:prism="http://prismlibrary.com"
                        xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
                        xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
                        Title="{Binding [HomePage_Title]}"
-                       x:TypeArguments="viewModels:HomeViewModel"
-                       x:DataType="viewModels:HomeViewModel"
-                       prism:ViewModelLocator.AutowireViewModel="True">
+                       x:DataType="viewModels:HomeViewModel">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Spacing="16" Padding="16">
