--- a/Templates/Template.Mobile/Views/ContentPages/StartupPage.xaml
+++ b/Templates/Template.Mobile/Views/ContentPages/StartupPage.xaml
@@ -2,13 +2,10 @@
 <views:ContentPageBase x:Class="Template.Mobile.Views.StartupPage"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       xmlns:prism="http://prismlibrary.com"
                        xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
                        xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
                        Title="{Binding [StartupPage_Title]}"
-                       x:TypeArguments="viewModels:StartupViewModel"
-                       x:DataType="viewModels:StartupViewModel"
-                       prism:ViewModelLocator.AutowireViewModel="True">
+                       x:DataType="viewModels:StartupViewModel">
     <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
         <Image MinimumWidthRequest="240"
