--- a/Templates/Template.Mobile/Views/ContentViews/LoadingView.xaml
+++ b/Templates/Template.Mobile/Views/ContentViews/LoadingView.xaml
@@ -1,21 +1,17 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<views:ContentViewBase x:Class="Template.Mobile.Views.LoadingView"
-                       xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       mc:Ignorable="d"
-                       xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
-                       xmlns:prism="http://prismlibrary.com"
-                       xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
-                       xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
-                       x:TypeArguments="viewModels:LoadingViewModel"
-                       x:DataType="viewModels:LoadingViewModel"
-                       prism:ViewModelLocator.AutowireViewModel="True">
+<ContentView x:Class="Template.Mobile.Views.LoadingView"
+             xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
+             xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
+             xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
+             x:DataType="viewModels:LoadingViewModel"
+             BackgroundColor="Transparent">
     <lottie:AnimationView x:Name="AnimationView"
-                         HorizontalOptions="FillAndExpand"
-                         VerticalOptions="FillAndExpand"
-                         Animation="LoadingViewLottie.json"
-                         AutoPlay="True"
-                         Loop="True" />
-</views:ContentViewBase>
+                          HorizontalOptions="FillAndExpand"
+                          VerticalOptions="FillAndExpand"
+                          Animation="LoadingViewLottie.json"
+                          AutoPlay="True"
+                          HardwareAcceleration="True"
+                          Loop="True" />
+</ContentView>
