--- a/Templates/Template.Mobile/Resources/Dictionaries/Values.xaml
+++ b/Templates/Template.Mobile/Resources/Dictionaries/Values.xaml
@@ -3,6 +3,30 @@
                     xmlns="http://xamarin.com/schemas/2014/forms"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
+    <!--  Generic Values  -->
+
+    <!--  Generic Padding  -->
+    <x:Double x:Key="SmallPadding">4</x:Double>
+    <x:Double x:Key="MediumPadding">8</x:Double>
+    <x:Double x:Key="StandardPadding">16</x:Double>
+    <x:Double x:Key="SmallSpacing">4</x:Double>
+    <x:Double x:Key="MediumSpacing">8</x:Double>
+    <x:Double x:Key="StandardSpacing">16</x:Double>
+
+    <!--  Generic TextSize  -->
+    <x:Double x:Key="TextSizeHeadline">20</x:Double>
+    <x:Double x:Key="TextSizeTitle">18</x:Double>
+    <x:Double x:Key="TextSizeSubhead">16</x:Double>
+    <x:Double x:Key="TextSizeBody">14</x:Double>
+    <x:Double x:Key="TextSizeCaption">12</x:Double>
+    <x:Double x:Key="TextSizeSmallCaption">11</x:Double>
+
+    <!--  Generic Listviews Height  -->
+    <x:Double x:Key="ListViewSingleLineHeight">48</x:Double>
+    <x:Double x:Key="ListViewTwoLinesHeight">72</x:Double>
+    <x:Double x:Key="ListViewThreeLinesHeight">88</x:Double>
+
+
     <!--  Platform Specifics  -->
 
     <OnPlatform x:Key="ToolbarHeight" x:TypeArguments="GridLength">
@@ -58,27 +82,6 @@
 
     <Thickness x:Key="StandardTopThickness" Top="{StaticResource StandardPadding}" />
 
-    <!--  Generic Padding  -->
 
-    <x:Double x:Key="SmallPadding">4</x:Double>
-    <x:Double x:Key="MediumPadding">8</x:Double>
-    <x:Double x:Key="StandardPadding">16</x:Double>
-    <x:Double x:Key="SmallSpacing">4</x:Double>
-    <x:Double x:Key="MediumSpacing">8</x:Double>
-    <x:Double x:Key="StandardSpacing">16</x:Double>
-
-    <!--  Generic TextSize  -->
-
-    <x:Double x:Key="TextSizeHeadline">20</x:Double>
-    <x:Double x:Key="TextSizeTitle">18</x:Double>
-    <x:Double x:Key="TextSizeSubhead">16</x:Double>
-    <x:Double x:Key="TextSizeBody">14</x:Double>
-    <x:Double x:Key="TextSizeCaption">12</x:Double>
-    <x:Double x:Key="TextSizeSmallCaption">11</x:Double>
-
-    <!--  Generic Listviews Height  -->
-    <x:Double x:Key="ListViewSingleLineHeight">48</x:Double>
-    <x:Double x:Key="ListViewTwoLinesHeight">72</x:Double>
-    <x:Double x:Key="ListViewThreeLinesHeight">88</x:Double>
 
 </ResourceDictionary>
