--- a/Templates/Template.Mobile/Views/TabPages/Debug_BottomTabsPage.xaml
+++ b/Templates/Template.Mobile/Views/TabPages/Debug_BottomTabsPage.xaml
@@ -1,41 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage x:Class="Template.Mobile.Views.Debug_BottomTabsPage"
+<views:BottomTabbedPageBase x:Class="Template.Mobile.Views.Debug_BottomTabsPage"
             xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:lazyView="clr-namespace:Prism.Forms.LazyView;assembly=Prism.Forms.LazyView"
             xmlns:viewModels="clr-namespace:Template.Mobile.ViewModels;assembly=Template.Mobile"
             xmlns:views="clr-namespace:Template.Mobile.Views;assembly=Template.Mobile"
             Title="{Binding [Debug_BottomTabsPage_Title]}"
-            x:DataType="viewModels:Debug_BottomTabsViewModel"
-            BarBackgroundColor="{DynamicResource DynamicNavigationBarColor}"
-            BarTextColor="White"
-            SelectedTabColor="White"
-            UnselectedTabColor="Silver">
+            x:DataType="viewModels:Debug_BottomTabsViewModel">
+
+    <!--
+        BarBackgroundColor="{DynamicResource DynamicNavigationBarColor}"
+        BarTextColor="White"
+        SelectedTabColor="White"
+        UnselectedTabColor="Silver"
+    -->
 
     <!--  ! Do not forget to RegisterForNavigation for each LazyContentPage dynamicaly generated  -->
 
-    <!--<NavigationPage Title="{Binding [Debug_SamplesView_Title]}" IconImageSource="ic_image.png">
-        <x:Arguments>-->
-    <lazyView:LazyContentPage Title="{Binding [Debug_SamplesView_Title]}"
+    <lazyView:LazyContentPage Title="Samples"
                               x:TypeArguments="views:LoadingView, views:Debug_SamplesView"
-                              IconImageSource="ic_image.png" />
-    <!--</x:Arguments>
-    </NavigationPage>-->
+                              IconImageSource="ic_list.png" />
+    <!--<lazyView:LazyContentPage Title="{Binding [Debug_SamplesView_Title]}"
+                              x:TypeArguments="views:Debug_SamplesView"
+                              IconImageSource="ic_list.png" />-->
 
-    <!--<NavigationPage Title="{Binding [Debug_ImagesView_Title]}" IconImageSource="ic_image.png">
-        <x:Arguments>-->
-    <lazyView:LazyContentPage Title="{Binding [Debug_ImagesView_Title]}"
+
+    <lazyView:LazyContentPage Title="Images"
                               x:TypeArguments="views:LoadingView,views:Debug_ImagesView"
                               IconImageSource="ic_image.png" />
-    <!--</x:Arguments>
-    </NavigationPage>-->
+    <!--<lazyView:LazyContentPage Title="{Binding [Debug_ImagesView_Title]}"
+                              x:TypeArguments="views:Debug_ImagesView"
+                              IconImageSource="ic_image.png" />-->
 
-    <!--<NavigationPage Title="{Binding [Debug_ThemesView_Title]}" IconImageSource="ic_brightness_6.png">
-        <x:Arguments>-->
-    <lazyView:LazyContentPage Title="{Binding [Debug_ThemesView_Title]}"
+
+    <lazyView:LazyContentPage Title="Thèmes"
                               x:TypeArguments="views:LoadingView,views:Debug_ThemesView"
                               IconImageSource="ic_brightness_6.png" />
-    <!--</x:Arguments>
-    </NavigationPage>-->
+    <!--<lazyView:LazyContentPage Title="{Binding [Debug_ThemesView_Title]}"
+                              x:TypeArguments="views:Debug_ThemesView"
+                              IconImageSource="ic_brightness_6.png" />-->
 
-</TabbedPage>
+</views:BottomTabbedPageBase>
